add idempotency-header on docs
